# orta

./: .gitignore  Cargo.toml  README.md  compose.yaml
auth/: Cargo.toml
auth/src/: application.rs  lib.rs  main.rs  service.rs
auth/src/utils/: fingerprint.rs  mod.rs  random_string.rs
backend/: Cargo.toml  rust.dockerfile
backend/configuration/: base.yaml
backend/migrations/: 0001_setup.sql  0002_initial.sql  0002_users.sql  0004_articles.sql  0005_tags.sql  0006_lists.sql  0007_series.sql  0008_comments.sql  0009_follow.sql
backend/src/: application.rs  config.rs  configuration.rs  lib.rs  main.rs
backend/src/middlewares/: auth.rs  mod.rs  owner.rs  role.rs  service_client.rs
backend/src/models/: account_model.rs  article_model.rs  comment_model.rs  enums.rs  list_model.rs  mod.rs  password_model.rs  series_model.rs  tag_model.rs  user_model.rs
backend/src/repositories/: account_repository.rs  article_repository.rs  comment_repository.rs  list_repository.rs  mod.rs  password_repository.rs  series_repository.rs  tag_repository.rs  user_repository.rs
backend/src/repository/: article_repository.rs  mod.rs  repository.rs  tag_repository.rs  user_repository.rs
backend/src/routes/: admin.rs  article.rs  assets.rs  auth.rs  comment.rs  list.rs  mod.rs  series.rs  tags.rs  user.rs
backend/src/routes/auth/: credential.rs  github.rs  google.rs  mod.rs
backend/src/services/: auth.rs  mod.rs
backend/src/utils/: cookie.rs  errors.rs  fingerprint.rs  jwt.rs  mapper.rs  mod.rs  params.rs  random_string.rs
backend/tests/: fingerprint.rs  health_checker.rs  helpers.rs  jwt.rs
collaborative/: .gitignore  package-lock.json  package.json  tsconfig.json
collaborative/src/: index.ts
frontend/: .prettierrc.json  next.config.js  next.config.mjs  next.dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20240309074145_initial/: migration.sql
frontend/src/: middleware.ts  shared.ts  types.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(marketing)/about/: page.tsx
frontend/src/app/(marketing)/blog/: page.tsx
frontend/src/app/(marketing)/privacy/: page.tsx
frontend/src/app/(marketing)/terms/: page.tsx
frontend/src/app/(platform)/: layout.tsx
frontend/src/app/(platform)/(home)/: layout.tsx
frontend/src/app/(platform)/(home)/(main)/: feed.tsx  layout.tsx  page.tsx
frontend/src/app/(platform)/(home)/[user_id]/: page.tsx
frontend/src/app/(platform)/auth/: page.tsx
frontend/src/app/actions/: article.ts  asset.ts  auth.ts  comment.ts  list.ts  series.ts  tags.ts  user.ts
frontend/src/app/actions/signup/: index.ts  schema.ts  type.ts
frontend/src/app/lib/: definitions.ts  session.ts
frontend/src/components/: EquationEditor.tsx  KatexEquationAlterer.tsx  KatexRenderer.tsx  aside.tsx  logo.tsx  marketing_links.tsx  mobile_footer.tsx  mode-toggle.tsx  sidebar_desktop.tsx  theme-provider.tsx
frontend/src/components/article/: article_tab.tsx  create_article_dialog.tsx  preview.tsx
frontend/src/components/article/edit/: format_select.tsx  image_button.tsx  menubar.tsx  youtube_button.tsx
frontend/src/components/article/list/: item.tsx  list.tsx
frontend/src/components/articles/: ArticleItem.tsx  ArticleList.tsx
frontend/src/components/comment/: comment_tab.tsx
frontend/src/components/comment/list/: item.tsx  list.tsx
frontend/src/components/comments/: CommentItem.tsx  CommentList.tsx
frontend/src/components/list/: create_list_dialog.tsx  list_popover.tsx  list_tab.tsx
frontend/src/components/list/list/: item.tsx  list.tsx
frontend/src/components/list/select_list/: list.tsx
frontend/src/components/series/: create_series_dialog.tsx  series_tab.tsx
frontend/src/components/series/series/: item.tsx  list.tsx
frontend/src/components/tags/: TagList.tsx
frontend/src/components/tags/input/: TagInput.tsx
frontend/src/components/theme/: toggle.tsx
frontend/src/components/ui/: button.tsx  calendar.tsx  card.tsx
frontend/src/components/user/: button.tsx  user_tab.tsx
frontend/src/components/user/list/: item.tsx  list.tsx
frontend/src/config/: site.ts
frontend/src/context/: AuthContext.tsx  article_context.tsx  session_context.tsx  shared_autocomplete_context.tsx
frontend/src/hooks/: useAction.ts  useReport.ts  use_report.ts
frontend/src/lib/: create-safe-action.ts  default_extension.ts  definitions.ts  languages.ts  prismadb.ts  types.ts  utils.ts
frontend/src/types/: nextauth.d.ts
migrations/: 0001_setup.sql  0002_users.sql  0004_articles.sql  0005_tags.sql  0006_lists.sql  0007_series.sql  0008_comments.sql  0009_follow.sql  0011_assets.sql  0012_dummy.sql
notification/: Cargo.toml
notification/src/: application.rs  main.rs
notification/src/services/: mail.rs
prometheus/: prometheus.yaml
resource/: Cargo.toml
resource/src/: application.rs  lib.rs  main.rs  permissions.rs
resource/src/services/: article_service.rs  comment_service.rs  list_service.rs  mod.rs  series_service.rs  tag_service.rs  user_service.rs
resource/src/utils/: mod.rs  permissions.rs  split_cursor.rs
shared/: Cargo.toml  build.rs
shared/configuration/: .gitignore  base.yaml
shared/proto/: auth.proto  resource.proto  storage.proto
shared/protos/: article.proto  comment.proto  common.proto  list.proto  series.proto  storage.proto  tag.proto  user.proto
shared/src/: configuration.rs  lib.rs
shared/src/models/: account_model.rs  article_model.rs  asset_model.rs  comment_model.rs  enums.rs  list_model.rs  mod.rs  series_model.rs  tag_model.rs  user_model.rs
shared/src/repositories/: account_repository.rs  article_repository.rs  asset_repository.rs  comment_repository.rs  list_repository.rs  mod.rs  series_repository.rs  tag_repository.rs  user_repository.rs  validation_token.rs
shared/src/utils/: jwt.rs  mappers.rs  message.rs  mod.rs  params.rs  random_string.rs
shared/tests/: configuration.rs  get_articles.rs  get_articles_test.rs
storage/: Cargo.toml
storage/src/: application.rs  lib.rs  main.rs  service.rs
(+114 files in other folders)
