[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "auth"

[dependencies]
tonic.workspace = true
tonic-reflection.workspace = true

# Async Runtime
tokio.workspace = true

# Database:
sqlx.workspace = true

# Auth:
oauth2 = "4.4.2"
jsonwebtoken.workspace = true
reqwest = { version = "0.12.2", features = ["json"] }
bcrypt = "0.15.1"
sha2 = "0.10.8"
hmac = "0.12.1"

# Logging:
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialisation/Deserialisation:
prost.workspace = true
serde.workspace = true
serde_json.workspace = true

# Time:
chrono.workspace = true
time.workspace = true

# Error:
thiserror.workspace = true
anyhow.workspace = true

# Utils
slug.workspace = true
secrecy.workspace = true
rand = { version = "0.8.5", features = ["min_const_gen"] }
shared = { path = "../shared" }
