[package]
name = "backend"
version = "0.1.0"
authors = ["Rakhat Yskak yskak.rakhat@gmail.com"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
# Web Framework:
axum = { version = "0.7.5", features = ["http2"] }
axum-core = "0.4.3"
axum-extra = {version="0.9.3", features = ["cookie-private", "query", "cookie", "cookie-signed", "typed-header"]}
cookie = "0.18"

# Auth:
oauth2 = "4.4.2"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.2", features = ["json"] }
bcrypt = "0.15.1"
sha2 = "0.10.8"
hmac = "0.12.1"

# Middleware:
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace", "compression-full", "decompression-full", "catch-panic", "timeout"] }

# Database:
sqlx = { version = "0.7.4", features = ["runtime-tokio", "macros", "uuid", "json", "chrono", "migrate", "postgres"] }

# Async Runtime:
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = "0.7.10"

# Logging:
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Metrics
axum-prometheus = "0.6.1"

# Environment variables:
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

# Serialisation/Deserialisation:
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde-aux = "4.5.0"

# Validation:
axum-valid = "0.18.0"
validator = { version = "0.18", features = ["derive"] }

# Time:
chrono = { version = "0.4.37", features = ["clock", "serde"] }
time = "0.3.34"

# Error:
thiserror = "1.0.58"
anyhow = "1.0.82"

# Utils:
rand = { version = "0.8.5", features = ["min_const_gen"] }
slug = "0.1.5"
futures = "0.3.30"
config = { version = "0.14", default-features = false, features = ["yaml"] }
lazy_static = "1.4.0"
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
sqlx-cli = "0.7.4"
cargo-watch = "8.5.2"
wiremock = "0.6"
