[package]
name = "backend"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
# Web Framework:
axum = { version = "0.7.5", features = ["http2"] }
axum-core = "0.4.3"
axum-extra = {version="0.9.3", features = ["cookie-private", "query", "cookie", "cookie-signed", "typed-header"]}
cookie = "0.18"

# Middleware:
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace", "compression-full", "decompression-full", "catch-panic", "timeout"] }

# Database:
sqlx.workspace = true

# Auth:
oauth2 = "4.4.2"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.2", features = ["json"] }
bcrypt = "0.15.1"

# Async Runtime:
tokio.workspace = true
async-trait.workspace = true

# Logging:
tracing.workspace = true
tracing-subscriber.workspace = true

# Metrics
axum-prometheus = "0.6.1"

# Serialisation/Deserialisation:
serde.workspace = true
serde_json.workspace = true

# Validation:
axum-valid = "0.18.0"
validator = { version = "0.18", features = ["derive"] }

# Time:
chrono.workspace = true
time.workspace = true

# Error:
thiserror.workspace = true
anyhow.workspace = true

# Utils:
slug = "0.1.5"
futures = "0.3.30"
secrecy.workspace = true
shared = { path = "../shared" }

[dev-dependencies]
sqlx-cli.workspace = true
cargo-watch.workspace = true
wiremock.workspace = true
