[package]
name = "backend"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
# Web Framework:
axum = { version = "0.7.5", features = ["http2", "multipart"] }
axum-core = "0.4.3"
axum-extra = {version="0.9.3", features = ["cookie-private", "query", "cookie", "cookie-signed", "typed-header"]}
axum_typed_multipart = "0.11.1"
cookie = "0.18"

# Storage
minio = {git="https://github.com/minio/minio-rs.git"}

# Middleware:
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace", "compression-full", "decompression-full", "catch-panic", "timeout"] }

# Async Runtime:
tokio.workspace = true
tonic.workspace = true
async-trait.workspace = true

# Logging:
tracing.workspace = true
tracing-subscriber.workspace = true

# Metrics
axum-prometheus = "0.6.1"

# Serialisation/Deserialisation:
serde.workspace = true
serde_json.workspace = true
serde-aux.workspace = true

# Validation:
axum-valid = "0.18.0"
validator = { version = "0.18", features = ["derive"] }

# Time:
chrono.workspace = true
time.workspace = true

# Error:
thiserror.workspace = true
anyhow.workspace = true

# Utils:
secrecy.workspace = true
shared = { path = "../shared" }

[dev-dependencies]
sqlx-cli.workspace = true
cargo-watch.workspace = true
wiremock.workspace = true
