[package]
name = "resource"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "resource"

[dependencies]
# Framework:
tonic.workspace = true
tonic-reflection.workspace = true

# Async Runtime:
tokio.workspace = true

# Database:
sqlx.workspace = true

# Logging:
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialisation/Deserialisation:
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true

# Time:
chrono.workspace = true
time.workspace = true

# Error:
thiserror.workspace = true
anyhow.workspace = true

# Utils
slug.workspace = true
secrecy.workspace = true
shared = { path = "../shared" }
