[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic.workspace = true
tonic-types.workspace = true
async-trait.workspace = true

# Environment variables:
dotenv.workspace = true
dotenv_codegen.workspace = true

# Database:
sqlx.workspace = true

# Auth:
jsonwebtoken.workspace = true

# Time:
chrono.workspace = true
time.workspace = true

# Async Runtime:
tokio.workspace = true

# Logging:
tracing.workspace = true
tracing-subscriber.workspace = true

# Message Broker
amqprs.workspace = true

# Serialisation/Deserialisation:
prost.workspace = true
prost-types.workspace = true
prost-derive = "0.12.4"
serde.workspace = true
serde_json.workspace = true
serde-aux = "4.5.0"

# Utils
lazy_static.workspace = true
slug.workspace = true
secrecy.workspace = true
config = { version = "0.14", default-features = false, features = ["yaml"] }

[build-dependencies]
tonic-build.workspace = true

